# src/api/controllers/user.js
@@ -41,8 +41,21 @@ async function finalizeWithdraw (req, res) {
 	}
 }
 
+async function cancelWithdraw (req, res) {
+    try{
+        SecuritySingleton.verify({type : 'admin', req, permissions: ["super_admin"]});
+        let params = req.body;
+		let user = new User(params);
+        let data = await user.cancelWithdraw();
+        MiddlewareSingleton.respond(res, req, data);
+	}catch(err){
+        MiddlewareSingleton.respondError(res, err);
+	}
+}
+
 export {
     requestWithdraw,
     finalizeWithdraw,
-    requestAffiliateWithdraw
+    requestAffiliateWithdraw,
+    cancelWithdraw
 }
