# src/api/swagger/swagger.yaml
@@ -166,6 +166,37 @@ paths:
           description: Error
           schema:
             $ref: "#/definitions/ErrorResponse"
+
+  /users/cancelWithdraw:
+    x-swagger-router-controller: user
+    post:
+      tags:
+      - user
+      summary: Request for User Cancel Withdraw
+      operationId: cancelWithdraw
+      description: Request Cancel Withdraw
+      consumes:
+        - application/json
+      produces:
+        - application/json
+      parameters:
+        - in: body
+          name: user
+          description: User Information
+          required: true
+          schema:
+            $ref: '#/definitions/UserCancelWithdrawRequest'
+      responses:
+        "200":
+          description: Success
+          schema:
+            # a pointer to a definition
+            $ref: "#/definitions/GeneralResponse"
+        # responses may fall through to errors
+        default:
+          description: Error
+          schema:
+            $ref: "#/definitions/ErrorResponse"
   /app/finalizeWithdraw:
     x-swagger-router-controller: app
     post:
@@ -433,7 +464,46 @@ definitions:
         example: "0xe8rghwe8rghwe9r87ynw987eyncwre"
         description: |
           User Address
-  UserFinalizeWithdrawRequest : 
+  UserCancelWithdrawRequest :
+    type: object
+    required:
+      - app
+      - user
+      - withdraw_id
+      - currency
+      - note
+    properties:
+      app :
+        type : string
+        format : name
+        example : "5cuedgq7e6t334t34"
+        description: |
+          App ID
+      user :
+        type : string
+        format: name
+        example : "5cuedgq7e6t334t34"
+        description: |
+          User ID
+      withdraw_id :
+        type : string
+        format: name
+        example: "65f76st8vdsb3181"
+        description: |
+            Withdraw Id
+      currency :
+        type : string
+        format: name
+        example: "0xe8rghwe8rghwe9r87ynw987eyncwre"
+        description: |
+          User Address
+      note :
+        type : string
+        format: name
+        example: "Test Test"
+        description: |
+          Note text
+  UserFinalizeWithdrawRequest :
     type: object
     required:
       - app
