# src/controllers/Errors/ErrorManager.js
@@ -85,6 +85,29 @@ class ErrorManager {
                         libraries.throwError(libraries.handler.getError(libraries.handler.KEYS.WITHDRAW_ALREADY_ADDED)); 
                     break;
                 }
+                case 'CancelWithdraw' : {
+                    // Verify User
+                    if(typeof object == 'undefined' || Object.is(object, null)){
+                        libraries.throwError(libraries.handler.getError(libraries.handler.KEYS.APP_NOT_EXISTENT));
+                        break;
+                    }
+                    // Verify if Address of User is the Same as the Withdraw one
+                    if(object.wasAlreadyAdded){
+                        libraries.throwError(libraries.handler.getError(libraries.handler.KEYS.WITHDRAW_ALREADY_ADDED));
+                        break;
+                    }
+                    // Verify if App is Mentioned
+                    if(!object.app || _.isEmpty(object.app)){
+                        libraries.throwError(libraries.handler.getError(libraries.handler.KEYS.APP_NOT_EXISTENT));
+                        break;
+                    }
+                    // Verify if transaction was already added
+                    if(!object.withdrawExists){
+                        libraries.throwError(libraries.handler.getError(libraries.handler.KEYS.WITHDRAW_ID_NOT_DEFINED));
+                        break;
+                    }
+                    break;
+                }
             }
         }catch(err){
             throw err
